# PhotoTrick

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.bat  requirements.txt  test.bat
resources/styles/: main.qss
scripts/: build.sh  file_converter.py  file_converter_cli.py  paddle_server.py  setup_ocr_env.bat  setup_ocr_env.sh  start_ocr_server.bat  start_ocr_server.sh  stop_ocr_server.sh  test_deps.py  test_ocr_service.bat  test_ocr_service.sh
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  resources.qrc
src/classifiers/: InvoiceClassifier.cpp  InvoiceClassifier.h
src/core/: ConfigManager.cpp  ConfigManager.h  FileConverter.cpp  FileConverter.h  FileManager.cpp  FileManager.h  OcrManager.cpp  OcrManager.h
src/exporters/: CsvExporter.cpp  CsvExporter.h  JsonExporter.cpp  JsonExporter.h  MarkdownExporter.cpp  MarkdownExporter.h
src/models/: ExportResult.cpp  ExportResult.h  InvoiceData.cpp  InvoiceData.h  ItineraryData.cpp  ItineraryData.h  TableData.cpp  TableData.h
src/ocr/: ClaudeClient.cpp  ClaudeClient.h  OcrInterface.h  OcrServerManager.cpp  OcrServerManager.h  OpenAIClient.cpp  OpenAIClient.h  PaddleOcr.cpp  PaddleOcr.h
src/processors/: InvoiceRecognizer.cpp  InvoiceRecognizer.h  ItineraryRecognizer.cpp  ItineraryRecognizer.h  TableExtractor.cpp  TableExtractor.h
src/ui/: ApiConfigWidget.cpp  ApiConfigWidget.h  CategoryView.cpp  CategoryView.h  FileListView.cpp  FileListView.h  ProcessingPanel.cpp  ProcessingPanel.h  ResultPreview.cpp  ResultPreview.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: OcrParser.cpp  OcrParser.h
